Update homepage campaigns svg to fix stretch

--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -420,6 +420,7 @@ body.home-page {
 	&__campaign {
 		position: relative;
 		&__subheader {
+			margin-top: 0;
 			margin-bottom: 0;
 		}
 		&__container {
